fix: Favorite button z-index fix

--- a/src/components/FavoriteButton/style.module.scss
+++ b/src/components/FavoriteButton/style.module.scss
@@ -1,6 +1,6 @@
 .favorite {
     cursor: pointer;
-    z-index: 99;
+    z-index: 5;
     justify-self: end;
     display: flex;
     align-items: center;
